# weather-station

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  SUPPORT.md  Taskfile.yml  main.md  mkdocs.yml  pdfs.db  pyproject.toml  requirements-dev.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  configuration_issue.md  documentation_request.md  feature_request.md  performance_issue.md
.github/workflows/: ci.yml  dependency-review.yml  release.yml
backend/: __init__.py  example.py  main.py  models.py  sensors.py  station.py
backend/pdf_converter/: README.md  __init__.py  converter.py  example.py  models.py
docs/: assembly.md  configuration.md  examples.md  getting-started.md  hardware.md  index.md  network.md  power.md  software.md
docs/api/: models.md  sensors.md  station.md
docs/stylesheets/: extra.css
tests/: test_url_to_pdf.py  test_weather_station.py
